feat: works with java8 and android