@@ -133,7 +133,7 @@ public class LibraryUtils {
             wrapperLibName = "libwhisper-jni.so";
             String cpuInfo;
             try {
-                cpuInfo = Files.readString(Path.of("/proc/cpuinfo"));
+                cpuInfo = new String(Files.readAllBytes(Path.of("/proc/cpuinfo")));
             } catch (IOException ignored) {
                 cpuInfo = "";
             }
